# erebus-shell

./: .dockerignore  .gitignore  Dockerfile  README.md  Research Report.md  docker-compose.yml  pyproject.toml
config/: erebus.example.yaml
docs/superpowers/plans/: 2026-06-05-erebus-shell-overview.md  2026-06-05-erebus-shell-phase1-policy-state.md  2026-06-05-erebus-shell-phase2-executor.md  2026-06-05-erebus-shell-phase3-tickets.md  2026-06-05-erebus-shell-phase4-mcp-server.md  2026-06-05-erebus-shell-phase5-supervisor.md  2026-06-05-erebus-shell-phase6-ssh-executor.md  2026-06-05-erebus-shell-phase7-zoho.md  2026-06-05-erebus-shell-phase8-opencode.md
erebus/: __init__.py  cli.py
erebus/agents/: base.py  claude_code.py  opencode.py  stub.py
erebus/executor/: base.py  local.py  ssh.py
erebus/mcp/: gate.py  server.py
erebus/policy/: engine.py  models.py  parsing.py
erebus/state/: models.py  store.py
erebus/supervisor/: bootstrap.py  orchestrator.py  service.py
erebus/tickets/: base.py  local.py  zoho.py
tests/: test_cli.py
tests/agents/: test_claude_code.py  test_opencode.py  test_stub.py
tests/executor/: test_base.py  test_local.py  test_ssh.py
tests/mcp/: test_executor_factory.py  test_gate.py  test_server.py
tests/policy/: test_engine.py  test_models.py  test_parsing.py
tests/state/: test_store.py
tests/supervisor/: test_orchestrator.py  test_service.py
tests/tickets/: test_base.py  test_local.py  test_zoho.py
