[project]
name = "erebus-shell"
version = "0.1.0"
description = "Gating shell that wraps AI agents with an allowlist + approval-ticket chokepoint"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "mcp>=1.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "asyncssh>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
erebus = "erebus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["erebus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
